src/main/gen/com/intellij/xtextLanguage/xtext/parser/XtextParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.xtextLanguage.xtext.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

import static com.intellij.xtextLanguage.xtext.parserUtilBase.GeneratedParserUtilBaseCopy.*;
import static com.intellij.xtextLanguage.xtext.psi.XtextTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XtextParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

    static final Parser rule_recovery_parser_ = new Parser() {
        public boolean parse(PsiBuilder b, int l) {
            return rule_recovery(b, l + 1);
        }
    };

  /* ********************************************************** */
  // ( Annotation)*
  // 	'enum' ValidID ('returns' TypeRef)? ':'
  // 		EnumLiterals
  static boolean AbstractEnumRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractEnumRule")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = AbstractEnumRule_0(b, l + 1);
    r = r && consumeToken(b, ENUM);
    p = r; // pin = 2
    r = r && report_error_(b, ValidID(b, l + 1));
    r = p && report_error_(b, AbstractEnumRule_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, COLON)) && r;
    r = p && EnumLiterals(b, l + 1) && r;
    exit_section_(b, l, m, r, p, rule_recovery_parser_);
    return r || p;
  }

  // ( Annotation)*
  private static boolean AbstractEnumRule_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractEnumRule_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AbstractEnumRule_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AbstractEnumRule_0", c)) break;
    }
    return true;
  }

  // ( Annotation)
  private static boolean AbstractEnumRule_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractEnumRule_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('returns' TypeRef)?
  private static boolean AbstractEnumRule_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractEnumRule_3")) return false;
    AbstractEnumRule_3_0(b, l + 1);
    return true;
  }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        boolean r;
        if (t == PARSER_RULE_HOLDER) {
            r = PARSER_RULE_HOLDER(b, l + 1);
        } else {
            r = Grammar(b, l + 1);
        }
        return r;
    }

  /* ********************************************************** */
  // GeneratedMetamodel | ReferencedMetamodel
  public static boolean AbstractMetamodelDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractMetamodelDeclaration")) return false;
    if (!nextTokenIs(b, "<abstract metamodel declaration>", GENERATE, IMPORT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_METAMODEL_DECLARATION, "<abstract metamodel declaration>");
    r = GeneratedMetamodel(b, l + 1);
    if (!r) r = ReferencedMetamodel(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // NegatedToken | UntilToken
  public static boolean AbstractNegatedToken(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractNegatedToken")) return false;
    if (!nextTokenIs(b, "<abstract negated token>", ACX_MARK, WEAK_PRED)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_NEGATED_TOKEN, "<abstract negated token>");
    r = NegatedToken(b, l + 1);
    if (!r) r = UntilToken(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (Annotation)*
  // 	(
  // 	  'fragment' RuleNameAndParams ('*' | ('returns' TypeRef)?)
  // 	| RuleNameAndParams ('returns' TypeRef)?
  // 	)
  // 	('hidden' '(' (REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*)? ')')? ':'
  // 		Alternatives
  static boolean AbstractParserRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = AbstractParserRule_0(b, l + 1);
    r = r && AbstractParserRule_1(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, AbstractParserRule_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, COLON)) && r;
    r = p && Alternatives(b, l + 1) && r;
    exit_section_(b, l, m, r, p, rule_recovery_parser_);
    return r || p;
  }

  // (Annotation)*
  private static boolean AbstractParserRule_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AbstractParserRule_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AbstractParserRule_0", c)) break;
    }
    return true;
  }

  // (Annotation)
  private static boolean AbstractParserRule_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'fragment' RuleNameAndParams ('*' | ('returns' TypeRef)?)
  // 	| RuleNameAndParams ('returns' TypeRef)?
  private static boolean AbstractParserRule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AbstractParserRule_1_0(b, l + 1);
    if (!r) r = AbstractParserRule_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'fragment' RuleNameAndParams ('*' | ('returns' TypeRef)?)
  private static boolean AbstractParserRule_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FRAGMENT);
    r = r && RuleNameAndParams(b, l + 1);
    r = r && AbstractParserRule_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '*' | ('returns' TypeRef)?
  private static boolean AbstractParserRule_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASTERISK);
    if (!r) r = AbstractParserRule_1_0_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('returns' TypeRef)?
  private static boolean AbstractParserRule_1_0_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_0_2_1")) return false;
    AbstractParserRule_1_0_2_1_0(b, l + 1);
    return true;
  }

  // 'returns' TypeRef
  private static boolean AbstractParserRule_1_0_2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_0_2_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RETURNS);
    r = r && TypeRef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // RuleNameAndParams ('returns' TypeRef)?
  private static boolean AbstractParserRule_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = RuleNameAndParams(b, l + 1);
    r = r && AbstractParserRule_1_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('returns' TypeRef)?
  private static boolean AbstractParserRule_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_1_1")) return false;
    AbstractParserRule_1_1_1_0(b, l + 1);
    return true;
  }

  // 'returns' TypeRef
  private static boolean AbstractParserRule_1_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_1_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RETURNS);
    r = r && TypeRef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('hidden' '(' (REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*)? ')')?
  private static boolean AbstractParserRule_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_2")) return false;
    AbstractParserRule_2_0(b, l + 1);
    return true;
  }

    // 'returns' TypeRef
    private static boolean AbstractEnumRule_3_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractEnumRule_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
        r = consumeToken(b, RETURNS);
        r = r && TypeRef(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*)?
  private static boolean AbstractParserRule_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_2_0_2")) return false;
    AbstractParserRule_2_0_2_0(b, l + 1);
    return true;
  }

  // REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*
  private static boolean AbstractParserRule_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = REFERENCE_AbstractRule_RuleID(b, l + 1);
    r = r && AbstractParserRule_2_0_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' REFERENCE_AbstractRule_RuleID)*
  private static boolean AbstractParserRule_2_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractParserRule_2_0_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AbstractParserRule_2_0_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AbstractParserRule_2_0_2_0_1", c)) break;
    }
    return true;
  }

    // 'hidden' '(' (REFERENCE_AbstractRule_RuleID/*hiddenTokens+=[AbstractRule|RuleID]*/ (',' REFERENCE_AbstractRule_RuleID)*)? ')'
    private static boolean AbstractParserRule_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractParserRule_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, HIDDEN, L_BRACKET);
        r = r && AbstractParserRule_2_0_2(b, l + 1);
        r = r && consumeToken(b, R_BRACKET);
        //last
        exit_section_(b, m, null, r);
        return r;
    }

    // ',' REFERENCE_AbstractRule_RuleID
    private static boolean AbstractParserRule_2_0_2_0_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractParserRule_2_0_2_0_1_0")) return false;
    boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, COMMA);
        r = r && REFERENCE_AbstractRule_RuleID(b, l + 1);
        exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Keyword |
  // 	RuleCall |
  // 	ParenthesizedElement |
  // 	PredicatedKeyword |
  // 	PredicatedRuleCall |
  // 	PredicatedGroup
  public static boolean AbstractTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TERMINAL, "<abstract terminal>");
    r = Keyword(b, l + 1);
    if (!r) r = RuleCall(b, l + 1);
    if (!r) r = ParenthesizedElement(b, l + 1);
    if (!r) r = PredicatedKeyword(b, l + 1);
    if (!r) r = PredicatedRuleCall(b, l + 1);
    if (!r) r = PredicatedGroup(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (Annotation)*
  // 	'terminal' ('fragment' ValidID | ValidID ('returns' TypeRef)?) ':'
  // 		TerminalAlternatives
  static boolean AbstractTerminalRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = AbstractTerminalRule_0(b, l + 1);
    r = r && consumeToken(b, TERMINAL);
    p = r; // pin = 2
    r = r && report_error_(b, AbstractTerminalRule_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, COLON)) && r;
    r = p && TerminalAlternatives(b, l + 1) && r;
    exit_section_(b, l, m, r, p, rule_recovery_parser_);
    return r || p;
  }

  // (Annotation)*
  private static boolean AbstractTerminalRule_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AbstractTerminalRule_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AbstractTerminalRule_0", c)) break;
    }
    return true;
  }

  // (Annotation)
  private static boolean AbstractTerminalRule_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Annotation(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'fragment' ValidID | ValidID ('returns' TypeRef)?
  private static boolean AbstractTerminalRule_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AbstractTerminalRule_2_0(b, l + 1);
    if (!r) r = AbstractTerminalRule_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'fragment' ValidID
  private static boolean AbstractTerminalRule_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FRAGMENT);
    r = r && ValidID(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ValidID ('returns' TypeRef)?
  private static boolean AbstractTerminalRule_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ValidID(b, l + 1);
    r = r && AbstractTerminalRule_2_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('returns' TypeRef)?
  private static boolean AbstractTerminalRule_2_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTerminalRule_2_1_1")) return false;
    AbstractTerminalRule_2_1_1_0(b, l + 1);
    return true;
  }

    /* ********************************************************** */
    // ParserRule | TerminalRule | EnumRule
    static boolean AbstractRule(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractRule")) return false;
        boolean r;
        r = ParserRule(b, l + 1);
        if (!r) r = TerminalRule(b, l + 1);
        if (!r) r = EnumRule(b, l + 1);
        return r;
    }

  /* ********************************************************** */
  // AbstractTokenWithCardinality |
  // 	Action
  public static boolean AbstractToken(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractToken")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN, "<abstract token>");
    r = AbstractTokenWithCardinality(b, l + 1);
    if (!r) r = Action(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (Assignment | AbstractTerminal) ('?'|'*'|'+')?
  public static boolean AbstractTokenWithCardinality(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN_WITH_CARDINALITY, "<abstract token with cardinality>");
    r = AbstractTokenWithCardinality_0(b, l + 1);
    r = r && AbstractTokenWithCardinality_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Assignment | AbstractTerminal
  private static boolean AbstractTokenWithCardinality_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_0")) return false;
    boolean r;
    r = Assignment(b, l + 1);
    if (!r) r = AbstractTerminal(b, l + 1);
    return r;
  }

  // ('?'|'*'|'+')?
  private static boolean AbstractTokenWithCardinality_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1")) return false;
    AbstractTokenWithCardinality_1_0(b, l + 1);
    return true;
  }

  // '?'|'*'|'+'
  private static boolean AbstractTokenWithCardinality_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUES_MARK);
    if (!r) r = consumeToken(b, ASTERISK);
    if (!r) r = consumeToken(b, PLUS);
    exit_section_(b, m, null, r);
    return r;
  }

    // 'returns' TypeRef
    private static boolean AbstractTerminalRule_2_1_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTerminalRule_2_1_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, RETURNS);
        r = r && TypeRef(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

  /* ********************************************************** */
  // '{' TypeRef ('.' ValidID ('='|'+=') 'current')? '}'
  public static boolean Action(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action")) return false;
    if (!nextTokenIs(b, L_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, L_BRACE);
    r = r && TypeRef(b, l + 1);
    r = r && Action_2(b, l + 1);
    r = r && consumeToken(b, R_BRACE);
      //last
    exit_section_(b, m, ACTION, r);
    return r;
  }

    // ('.' ValidID ('='|'+=') 'current')?
    private static boolean Action_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action_2")) return false;
        Action_2_0(b, l + 1);
        return true;
    }

  // '='|'+='
  private static boolean Action_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Action_2_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, PLUS_EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ConditionalBranch ( ('|' ConditionalBranch)+)?
  public static boolean Alternatives(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALTERNATIVES, "<alternatives>");
    r = ConditionalBranch(b, l + 1);
    r = r && Alternatives_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ('|' ConditionalBranch)+)?
  private static boolean Alternatives_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1")) return false;
    Alternatives_1_0(b, l + 1);
    return true;
  }

  // ('|' ConditionalBranch)+
  private static boolean Alternatives_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Alternatives_1_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!Alternatives_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Alternatives_1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '|' ConditionalBranch
  private static boolean Alternatives_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternatives_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && ConditionalBranch(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

    // '.' ValidID ('='|'+=') 'current'
    private static boolean Action_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
        r = consumeToken(b, DOT);
        r = r && ValidID(b, l + 1);
        r = r && Action_2_0_2(b, l + 1);
        r = r && consumeToken(b, CURRENT);
        //last
        exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AssignableTerminal ( ('|' AssignableTerminal)+)?
  public static boolean AssignableAlternatives(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignableAlternatives")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE_ALTERNATIVES, "<assignable alternatives>");
    r = AssignableTerminal(b, l + 1);
    r = r && AssignableAlternatives_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
